7119294: Two command line options cause JVM to crash

Setup thread register in MacroAssembler::incr_allocated_bytes() on x64

Reviewed-by: kvn